--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,8 +26,7 @@
             android:layout_marginStart="10dp"
             android:background="#f74d4d"
             android:paddingEnd="10dp"
-            android:paddingStart="10dp"
-            android:onClick="playC"/>
+            android:paddingStart="10dp"/>
     </LinearLayout>
 
     <LinearLayout
@@ -46,8 +45,7 @@
             android:layout_marginStart="15dp"
             android:background="#4d7af7"
             android:paddingEnd="10dp"
-            android:paddingStart="10dp"
-            android:onClick="playD"/>
+            android:paddingStart="10dp"/>
     </LinearLayout>
 
     <LinearLayout
@@ -66,8 +64,7 @@
             android:layout_marginStart="20dp"
             android:background="#72c97d"
             android:paddingEnd="10dp"
-            android:paddingStart="10dp"
-            android:onClick="playE"/>
+            android:paddingStart="10dp"/>
     </LinearLayout>
 
     <LinearLayout
@@ -86,8 +83,7 @@
             android:layout_marginStart="25dp"
             android:background="#b94df7"
             android:paddingEnd="10dp"
-            android:paddingStart="10dp"
-            android:onClick="playF"/>
+            android:paddingStart="10dp"/>
     </LinearLayout>
 
     <LinearLayout
@@ -107,8 +103,7 @@
             android:layout_marginStart="30dp"
             android:background="#ffc400"
             android:paddingEnd="10dp"
-            android:paddingStart="10dp"
-            android:onClick="playG"/>
+            android:paddingStart="10dp"/>
     </LinearLayout>
 
     <LinearLayout
@@ -127,8 +122,7 @@
             android:layout_marginStart="35dp"
             android:background="#0084ff"
             android:paddingEnd="10dp"
-            android:paddingStart="10dp"
-            android:onClick="playA"/>
+            android:paddingStart="10dp"/>
     </LinearLayout>
 
     <LinearLayout
@@ -147,8 +141,7 @@
             android:layout_marginStart="40dp"
             android:background="#ff0576"
             android:paddingEnd="10dp"
-            android:paddingStart="10dp"
-            android:onClick="playB"/>
+            android:paddingStart="10dp"/>
     </LinearLayout>
 
 </LinearLayout>
